# BranchAndCutExample

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindCPLEX.cmake
config/: config.json
example_output/: coords.txt  model_end.lp  solutionEdges.txt
src/: CVRP_SEP_GCB.cpp  CVRP_SEP_GCB.h  ConfigParams.cpp  ConfigParams.h  Cvrp_bc.cpp  Cvrp_bc.h  Cvrp_cplex_interface.cpp  Cvrp_cplex_interface.h  Cvrp_sep_gcb.cpp  Cvrp_sep_gcb.h  Cvrpsep_callback.cpp  Cvrpsep_callback.h  Instance.cpp  Instance.h  InstanceCarp.cpp  InstanceCarp.h  InstanceWriter.cpp  InstanceWriter.h  Workers.cpp  Workers.h  cvrp_cplex_interface.cpp  cvrp_cplex_interface.h  main.cpp
src/CVRPSEP/: CMakeLists.txt  basegrph.cpp  capsep.cpp  capsep.h  cnstrmgr.h  main.cpp  memmod.cpp  memmod.h  prova.cpp  prova.h  strngcmp.cpp
src/LOG/: easylogger_conf.conf
src/Utils/: CVRPUtils.py  GetOpt.cpp  GetOpt.h  print_result.py
