cmake_minimum_required(VERSION 3.26)
project(CVRPSEP)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(CVRPSEP
        basegrph.cpp
        basegrph.h
        binpack.cpp
        binpack.h
        blocks.cpp
        blocks.h
        brnching.cpp
        brnching.h
        capsep.cpp
        capsep.h
        cnstrmgr.cpp
        cnstrmgr.h
        combsep.cpp
        combsep.h
        compcuts.cpp
        compcuts.h
        compress.cpp
        compress.h
        cutbase.cpp
        cutbase.h
        fcapfix.cpp
        fcapfix.h
        fcisep.cpp
        fcisep.h
        fcits.cpp
        fcits.h
        glmsep.cpp
        glmsep.h
        grsearch.cpp
        grsearch.h
        hpmstar.cpp
        hpmstar.h
        htoursep.cpp
        htoursep.h
        intap.cpp
        intap.h
        memmod.cpp
        memmod.h
        mstarsep.cpp
        mstarsep.h
        mxf.cpp
        mxf.h
        newhtour.cpp
        newhtour.h
        prova.cpp
        prova.h
        sort.cpp
        sort.h
        strcomb.cpp
        strcomb.h
        strngcmp.cpp
        strngcmp.h
        twomatch.cpp
        twomatch.h
        main.cpp)
